[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/dungeon/fallingplatform/fallingplatform.gd" type="Script" id=1]
[ext_resource path="res://scenes/dungeon/climbableblock.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/dungeon/movingplatform/movingplatform.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 16 )

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("blockR/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blockL/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "shake"
length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("blockR/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blockL/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 0, 0 ) ]
}

[node name="FallingPlatform" type="Node2D" index="0"]

script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}
is_climbable = true

[node name="enabler" type="VisibilityEnabler2D" parent="." index="0"]

position = Vector2( 0, 128 )
scale = Vector2( 8, 20 )
rect = Rect2( -10, -10, 20, 20 )
pause_animations = true
freeze_bodies = true
pause_particles = true
pause_animated_sprites = true
process_parent = false
physics_process_parent = false

[node name="Area2D" type="Area2D" parent="." index="1"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="blockR" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 16, 0 )

[node name="Sprite" parent="blockR" index="0"]

self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )

[node name="blockL" parent="." index="3" instance=ExtResource( 2 )]

position = Vector2( -16, 0 )

[node name="Sprite" parent="blockL" index="0"]

self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
flip_h = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/shake = SubResource( 3 )
blend_times = [  ]

[connection signal="screen_entered" from="enabler" to="." method="enter_screen"]

[connection signal="screen_exited" from="enabler" to="." method="exit_screen"]


[editable path="blockR"]
[editable path="blockL"]
